--- a/styles.css
+++ b/styles.css
@@ -7,4 +7,20 @@ grey - #95a5a6;
 red - #ee5253
 
 */
+body {
+  font-family: 'Roboto', sans-serif;
+}
 
+header{
+  border: medium solid teal;
+  background-color: teal;
+}
+
+.add-a-recipe-button {
+  float: right;
+  text-transform: uppercase;
+  border-radius: 5px;
+  padding: 5px;
+  margin-right: 15px;
+  margin-top: -45px
+}
