--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ header{
   background-color: teal;
 }
 
+/* buttons */
 .add-a-recipe-button {
   float: right;
   text-transform: uppercase;
@@ -23,4 +24,13 @@ header{
   padding: 5px;
   margin-right: 15px;
   margin-top: -45px
+}
+
+.clear-button {
+  text-transform: uppercase;
+}
+
+.lets-cook-button {
+  text-transform: uppercase;
+  background-color: #0fb9b1;
 }
