--- a/styles.css
+++ b/styles.css
@@ -13,9 +13,16 @@ body {
   background-size:cover;
 }
 
+.hidden {
+  display:none;
+}
+
 header {
   border: medium solid teal;
   background-color: teal;
+  margin-top: -15px;
+  margin-left: -10px;
+  margin-right: -10px;
 }
 
 
@@ -26,14 +33,22 @@ main {
   margin: 50px;
   margin-left: 80px;
   margin-right: 80px;
+  background-size: contain;
 }
 
 form {
   background-color: rgba(225, 225, 225, .9);
+  height: 450px;
+  width: 484px;
 }
 
 section {
   background-color: rgba(225, 225, 225, .9);
+}
+
+.title {
+  margin-left: 20px;
+  margin-top: 25px;
 }
 
 .what-are-you-looking-for {
@@ -43,7 +58,7 @@ section {
 
 input {
   margin-left: 30px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .cookpot {
@@ -54,22 +69,52 @@ input {
   margin-bottom: 140px;
 }
 
+.you-should-make {
+  background-color: rgba(225, 225, 225, .9);
+  height: 450px;
+  width: 484px;
+}
+
+.message {
+  text-align: center;
+  font-size: 14pt;
+  font-style: italic;
+  margin-top: 200px;
+}
+
+.random-dish {
+  text-align: center;
+  font-size: 30pt;
+  margin-top: -30px;
+}
 /* buttons */
 .add-a-recipe-button {
   float: right;
   text-transform: uppercase;
   border-radius: 5px;
   border-style: hidden;
-  padding: 5px;
+  padding: 10px;
   margin-right: 15px;
-  margin-top: -45px
+  margin-top: -43px
 }
 
-.clear-button {
+.clear {
   text-transform: uppercase;
+  float: right;
+  color: white;
+  background-color:#95a5a6;
+  border-style: hidden;
+  border-radius: 5px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-top: 100px;
+  margin-right: 20px;
 }
 
 .lets-cook-button {
+  font-size: 12pt;
   text-transform: uppercase;
   border-radius: 5px;
   border-style: hidden;
@@ -79,6 +124,4 @@ input {
   padding-top: 5px;
   padding-bottom: 5px;
   margin-left: 30px;
-
-
 }
